# MemeGenerator

./: README.md
backend/: Cargo.toml
backend/src/: handlers.rs  main.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  index.css
