[package]
name = "memegenerator-backend"
version = "1.0.0"
edition = "2024"

[dependencies]
actix-web = "4.11"
actix-cors = "0.7.1"

tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

base64 = "0.22"
rand = "0.9"

env_logger = "0.11"